--- a/index.html
+++ b/index.html
@@ -7,56 +7,103 @@
     <title>Parallax</title>
 </head>
 <body>
-<!-- header -->
-	<div class="header">
-	</div>
-	<!-- end header -->
+    <!-- header -->
+    <header>
+        <div class="header">
+            <div class="menu">
+                <div class="container">
+                    <div class="row">
+                        <div class="col-md-5">
+                            <div class="logo">
+                                <img src="img/logo.png" height="82" width="82" alt="">
+                            </div>
+                        </div>
 
-	<!-- main -->
-	<div class="content">
-	</div>
-	<!-- end main -->
+                        <div class="col-md-7">
+                            <nav>
+                                <ul>
+                                    <li><a href="#">Menu</a></li>
+                                    <li><a href="#">Menu</a></li>
+                                    <li><a href="#">Menu</a></li>
+                                    <li><a href="#">Menu</a></li>
+                                    <li><a href="#">Menu</a></li>
+                                </ul>
+                            </nav>
+                        </div>
+                    </div>
+                </div>
+            </div>
 
-	<!-- footer -->
-	<div class="footer">
-	</div>
+            <div class="main-header">
+                <div class="main-flex">
+                    <div class="second-flex">
+                        <div class="container">
+                            <div class="row">
+                                <div class="col-md-12">
+                                    <div class="main-title">
+                                        <h4>Welcome to my portfolio!</h4>
+                                        <h1>It's nice to meet you!</h1>
+                                        <a href="#">Tell me more</a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+        </div>
+    </header>
+    <!-- end header -->
+
+
+    <!-- main -->
+    <section>
+        <div class="page-content">
+            <h2>Page Title</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vero maxime sequi quae et molestiae quidem, illum illo possimus fugiat tempore ullam. Placeat odio harum ut iure optio explicabo, porro qui.
+            Culpa ex repudiandae odio velit dolorem accusantium provident repellendus quaerat sapiente labore quam, perferendis at fugiat hic veniam veritatis laudantium voluptate qui, consequuntur, vel debitis iure quidem quas? Praesentium, aut!
+            Maiores rerum possimus modi provident nam cum mollitia officia tempore alias minus dolorum iste commodi, quas, unde aut nihil consectetur? Fugiat, animi cumque pariatur dolore laborum ad consequuntur incidunt repudiandae.
+            Quas natus sed ratione distinctio. Fugiat rerum error sunt nulla consequatur illum voluptas provident amet deleniti veritatis, sed recusandae ipsum obcaecati fugit, vitae itaque enim eaque quaerat. Non, commodi! Libero!
+            Quae, accusamus nulla delectus rem ducimus quidem quod, repellendus maiores atque recusandae magni quisquam cum ea maxime porro, in consequatur placeat nobis deserunt libero aut animi? Ut rem est voluptate.
+            Mollitia molestiae tempora nobis hic reprehenderit deleniti, dolorem incidunt non et earum voluptates aperiam illo iste quod aliquid! Earum quod optio error repudiandae accusantium est? Dolores a itaque cum incidunt!
+            Itaque minima ea illo asperiores eius pariatur tempore quos recusandae rem excepturi quae placeat numquam quod illum, deleniti provident voluptas vero tenetur commodi sed labore! Quasi tempore voluptates vel a.
+            Doloribus, sint id nisi quaerat amet quisquam odit facere aperiam aspernatur perferendis quidem numquam! Dignissimos dicta blanditiis dolore id odio quo a, iure nihil nostrum quasi fuga, eveniet autem at?
+            Dolorum modi, molestiae vel expedita placeat qui quae, repellendus doloremque odio reprehenderit quod beatae aperiam eveniet repudiandae. Accusamus, vitae! Blanditiis doloremque repellendus et incidunt explicabo praesentium vero repellat laborum quam.
+            Impedit enim assumenda minima perferendis dolores, odit ducimus eos corrupti aperiam consectetur rerum dolorem, ad officiis mollitia doloremque iusto repellendus fugit deleniti minus magnam adipisci quos. Voluptatum deserunt dignissimos fuga.</p>
+        </div>
+
+        <div class="parallax">
+            <div class="parallax-content">
+                <h1>This is parallax</h1>
+            </div>
+
+            <div class="mask">
+
+            </div>
+        </div>
+
+        <div class="page-content">
+            <h2>Page Title</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vero maxime sequi quae et molestiae quidem, illum illo possimus fugiat tempore ullam. Placeat odio harum ut iure optio explicabo, porro qui.
+            Culpa ex repudiandae odio velit dolorem accusantium provident repellendus quaerat sapiente labore quam, perferendis at fugiat hic veniam veritatis laudantium voluptate qui, consequuntur, vel debitis iure quidem quas? Praesentium, aut!
+            Maiores rerum possimus modi provident nam cum mollitia officia tempore alias minus dolorum iste commodi, quas, unde aut nihil consectetur? Fugiat, animi cumque pariatur dolore laborum ad consequuntur incidunt repudiandae.
+            Quas natus sed ratione distinctio. Fugiat rerum error sunt nulla consequatur illum voluptas provident amet deleniti veritatis, sed recusandae ipsum obcaecati fugit, vitae itaque enim eaque quaerat. Non, commodi! Libero!
+            Quae, accusamus nulla delectus rem ducimus quidem quod, repellendus maiores atque recusandae magni quisquam cum ea maxime porro, in consequatur placeat nobis deserunt libero aut animi? Ut rem est voluptate.
+            Mollitia molestiae tempora nobis hic reprehenderit deleniti, dolorem incidunt non et earum voluptates aperiam illo iste quod aliquid! Earum quod optio error repudiandae accusantium est? Dolores a itaque cum incidunt!
+            Itaque minima ea illo asperiores eius pariatur tempore quos recusandae rem excepturi quae placeat numquam quod illum, deleniti provident voluptas vero tenetur commodi sed labore! Quasi tempore voluptates vel a.
+            Doloribus, sint id nisi quaerat amet quisquam odit facere aperiam aspernatur perferendis quidem numquam! Dignissimos dicta blanditiis dolore id odio quo a, iure nihil nostrum quasi fuga, eveniet autem at?
+            Dolorum modi, molestiae vel expedita placeat qui quae, repellendus doloremque odio reprehenderit quod beatae aperiam eveniet repudiandae. Accusamus, vitae! Blanditiis doloremque repellendus et incidunt explicabo praesentium vero repellat laborum quam.
+            Impedit enim assumenda minima perferendis dolores, odit ducimus eos corrupti aperiam consectetur rerum dolorem, ad officiis mollitia doloremque iusto repellendus fugit deleniti minus magnam adipisci quos. Voluptatum deserunt dignissimos fuga.</p>
+        </div>
+    </section>
+    <!-- end main -->
+
+
+  	<!-- footer -->
+    <footer>
+
+    </footer>
 	<!-- end footer -->
-
-
-    <div class="page-content">
-        <h2>Page Title</h2>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vero maxime sequi quae et molestiae quidem, illum illo possimus fugiat tempore ullam. Placeat odio harum ut iure optio explicabo, porro qui.
-        Culpa ex repudiandae odio velit dolorem accusantium provident repellendus quaerat sapiente labore quam, perferendis at fugiat hic veniam veritatis laudantium voluptate qui, consequuntur, vel debitis iure quidem quas? Praesentium, aut!
-        Maiores rerum possimus modi provident nam cum mollitia officia tempore alias minus dolorum iste commodi, quas, unde aut nihil consectetur? Fugiat, animi cumque pariatur dolore laborum ad consequuntur incidunt repudiandae.
-        Quas natus sed ratione distinctio. Fugiat rerum error sunt nulla consequatur illum voluptas provident amet deleniti veritatis, sed recusandae ipsum obcaecati fugit, vitae itaque enim eaque quaerat. Non, commodi! Libero!
-        Quae, accusamus nulla delectus rem ducimus quidem quod, repellendus maiores atque recusandae magni quisquam cum ea maxime porro, in consequatur placeat nobis deserunt libero aut animi? Ut rem est voluptate.
-        Mollitia molestiae tempora nobis hic reprehenderit deleniti, dolorem incidunt non et earum voluptates aperiam illo iste quod aliquid! Earum quod optio error repudiandae accusantium est? Dolores a itaque cum incidunt!
-        Itaque minima ea illo asperiores eius pariatur tempore quos recusandae rem excepturi quae placeat numquam quod illum, deleniti provident voluptas vero tenetur commodi sed labore! Quasi tempore voluptates vel a.
-        Doloribus, sint id nisi quaerat amet quisquam odit facere aperiam aspernatur perferendis quidem numquam! Dignissimos dicta blanditiis dolore id odio quo a, iure nihil nostrum quasi fuga, eveniet autem at?
-        Dolorum modi, molestiae vel expedita placeat qui quae, repellendus doloremque odio reprehenderit quod beatae aperiam eveniet repudiandae. Accusamus, vitae! Blanditiis doloremque repellendus et incidunt explicabo praesentium vero repellat laborum quam.
-        Impedit enim assumenda minima perferendis dolores, odit ducimus eos corrupti aperiam consectetur rerum dolorem, ad officiis mollitia doloremque iusto repellendus fugit deleniti minus magnam adipisci quos. Voluptatum deserunt dignissimos fuga.</p>
-    </div>
-    <div class="parallax">
-        <div class="parallax-content">
-            <h1>This is parallax</h1>
-        </div>
-
-        <div class="mask">
-
-        </div>
-    </div>
-    <div class="page-content">
-        <h2>Page Title</h2>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vero maxime sequi quae et molestiae quidem, illum illo possimus fugiat tempore ullam. Placeat odio harum ut iure optio explicabo, porro qui.
-        Culpa ex repudiandae odio velit dolorem accusantium provident repellendus quaerat sapiente labore quam, perferendis at fugiat hic veniam veritatis laudantium voluptate qui, consequuntur, vel debitis iure quidem quas? Praesentium, aut!
-        Maiores rerum possimus modi provident nam cum mollitia officia tempore alias minus dolorum iste commodi, quas, unde aut nihil consectetur? Fugiat, animi cumque pariatur dolore laborum ad consequuntur incidunt repudiandae.
-        Quas natus sed ratione distinctio. Fugiat rerum error sunt nulla consequatur illum voluptas provident amet deleniti veritatis, sed recusandae ipsum obcaecati fugit, vitae itaque enim eaque quaerat. Non, commodi! Libero!
-        Quae, accusamus nulla delectus rem ducimus quidem quod, repellendus maiores atque recusandae magni quisquam cum ea maxime porro, in consequatur placeat nobis deserunt libero aut animi? Ut rem est voluptate.
-        Mollitia molestiae tempora nobis hic reprehenderit deleniti, dolorem incidunt non et earum voluptates aperiam illo iste quod aliquid! Earum quod optio error repudiandae accusantium est? Dolores a itaque cum incidunt!
-        Itaque minima ea illo asperiores eius pariatur tempore quos recusandae rem excepturi quae placeat numquam quod illum, deleniti provident voluptas vero tenetur commodi sed labore! Quasi tempore voluptates vel a.
-        Doloribus, sint id nisi quaerat amet quisquam odit facere aperiam aspernatur perferendis quidem numquam! Dignissimos dicta blanditiis dolore id odio quo a, iure nihil nostrum quasi fuga, eveniet autem at?
-        Dolorum modi, molestiae vel expedita placeat qui quae, repellendus doloremque odio reprehenderit quod beatae aperiam eveniet repudiandae. Accusamus, vitae! Blanditiis doloremque repellendus et incidunt explicabo praesentium vero repellat laborum quam.
-        Impedit enim assumenda minima perferendis dolores, odit ducimus eos corrupti aperiam consectetur rerum dolorem, ad officiis mollitia doloremque iusto repellendus fugit deleniti minus magnam adipisci quos. Voluptatum deserunt dignissimos fuga.</p>
-    </div>
 </body>
 </html>
