--- a/index.html
+++ b/index.html
@@ -4,106 +4,152 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/style.css">
-    <title>Parallax</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+
+    <title>Nature</title>
 </head>
 <body>
     <!-- header -->
     <header>
         <div class="header">
-            <div class="menu">
-                <div class="container">
-                    <div class="row">
-                        <div class="col-md-5">
-                            <div class="logo">
-                                <img src="img/logo.png" height="82" width="82" alt="">
-                            </div>
+            <div class="container" style="background: rgba(21, 21, 21, 0.5);">
+                <div class="row py-2">
+                    <div class="col-md-5">
+                        <div class="logo">
+                            <img src="img/logo.png" height="82" width="82" alt="Nature Logo">
                         </div>
-
-                        <div class="col-md-7">
-                            <nav>
-                                <ul>
-                                    <li><a href="#">Menu</a></li>
-                                    <li><a href="#">Menu</a></li>
-                                    <li><a href="#">Menu</a></li>
-                                    <li><a href="#">Menu</a></li>
-                                    <li><a href="#">Menu</a></li>
-                                </ul>
-                            </nav>
-                        </div>
+                    </div>
+                    <div class="col-md-7 d-flex justify-content-end align-items-center">
+                        <ul>
+                            <li><a href="#">Home</a></li>
+                            <li><a href="#">About</a></li>
+                            <li><a href="https://www.pinterest.com/search/pins/?q=nature&rs=typed">Gallery</a></li>
+                            <li><a href="#">Blog</a></li>
+                            <li><a href="#">Contact</a></li>
+                        </ul>
                     </div>
                 </div>
             </div>
-
             <div class="main-header">
                 <div class="main-flex">
-                    <div class="second-flex">
-                        <div class="container">
-                            <div class="row">
-                                <div class="col-md-12">
-                                    <div class="main-title">
-                                        <h4>Welcome to my portfolio!</h4>
-                                        <h1>It's nice to meet you!</h1>
-                                        <a href="#">Tell me more</a>
-                                    </div>
+                    <div class="container">
+                        <div class="row">
+                            <div class="col-md-12">
+                                <div class="main-title">
+                                    <h4>Welcome to my portfolio!</h4>
+                                    <h1>Discover the Beauty of Nature</h1>
+                                    <a href="https://www.pinterest.com/search/pins/?q=nature&rs=typed" class="explore_btn">Explore More</a>
                                 </div>
                             </div>
                         </div>
                     </div>
                 </div>
             </div>
-
         </div>
     </header>
     <!-- end header -->
 
-
     <!-- main -->
     <section>
         <div class="page-content">
-            <h2>Page Title</h2>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vero maxime sequi quae et molestiae quidem, illum illo possimus fugiat tempore ullam. Placeat odio harum ut iure optio explicabo, porro qui.
-            Culpa ex repudiandae odio velit dolorem accusantium provident repellendus quaerat sapiente labore quam, perferendis at fugiat hic veniam veritatis laudantium voluptate qui, consequuntur, vel debitis iure quidem quas? Praesentium, aut!
-            Maiores rerum possimus modi provident nam cum mollitia officia tempore alias minus dolorum iste commodi, quas, unde aut nihil consectetur? Fugiat, animi cumque pariatur dolore laborum ad consequuntur incidunt repudiandae.
-            Quas natus sed ratione distinctio. Fugiat rerum error sunt nulla consequatur illum voluptas provident amet deleniti veritatis, sed recusandae ipsum obcaecati fugit, vitae itaque enim eaque quaerat. Non, commodi! Libero!
-            Quae, accusamus nulla delectus rem ducimus quidem quod, repellendus maiores atque recusandae magni quisquam cum ea maxime porro, in consequatur placeat nobis deserunt libero aut animi? Ut rem est voluptate.
-            Mollitia molestiae tempora nobis hic reprehenderit deleniti, dolorem incidunt non et earum voluptates aperiam illo iste quod aliquid! Earum quod optio error repudiandae accusantium est? Dolores a itaque cum incidunt!
-            Itaque minima ea illo asperiores eius pariatur tempore quos recusandae rem excepturi quae placeat numquam quod illum, deleniti provident voluptas vero tenetur commodi sed labore! Quasi tempore voluptates vel a.
-            Doloribus, sint id nisi quaerat amet quisquam odit facere aperiam aspernatur perferendis quidem numquam! Dignissimos dicta blanditiis dolore id odio quo a, iure nihil nostrum quasi fuga, eveniet autem at?
-            Dolorum modi, molestiae vel expedita placeat qui quae, repellendus doloremque odio reprehenderit quod beatae aperiam eveniet repudiandae. Accusamus, vitae! Blanditiis doloremque repellendus et incidunt explicabo praesentium vero repellat laborum quam.
-            Impedit enim assumenda minima perferendis dolores, odit ducimus eos corrupti aperiam consectetur rerum dolorem, ad officiis mollitia doloremque iusto repellendus fugit deleniti minus magnam adipisci quos. Voluptatum deserunt dignissimos fuga.</p>
+            <h2>The Majestic Forests</h2>
+            <p>Experience the tranquility of the dense forests, where the air is pure and the wildlife thrives. A walk through the woods can refresh your soul and reconnect you with nature.</p>
         </div>
 
         <div class="parallax">
             <div class="parallax-content">
-                <h1>This is parallax</h1>
+                <h1>Embrace the Wilderness</h1>
             </div>
-
-            <div class="mask">
-
-            </div>
+            <div class="mask"></div>
         </div>
 
         <div class="page-content">
-            <h2>Page Title</h2>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vero maxime sequi quae et molestiae quidem, illum illo possimus fugiat tempore ullam. Placeat odio harum ut iure optio explicabo, porro qui.
-            Culpa ex repudiandae odio velit dolorem accusantium provident repellendus quaerat sapiente labore quam, perferendis at fugiat hic veniam veritatis laudantium voluptate qui, consequuntur, vel debitis iure quidem quas? Praesentium, aut!
-            Maiores rerum possimus modi provident nam cum mollitia officia tempore alias minus dolorum iste commodi, quas, unde aut nihil consectetur? Fugiat, animi cumque pariatur dolore laborum ad consequuntur incidunt repudiandae.
-            Quas natus sed ratione distinctio. Fugiat rerum error sunt nulla consequatur illum voluptas provident amet deleniti veritatis, sed recusandae ipsum obcaecati fugit, vitae itaque enim eaque quaerat. Non, commodi! Libero!
-            Quae, accusamus nulla delectus rem ducimus quidem quod, repellendus maiores atque recusandae magni quisquam cum ea maxime porro, in consequatur placeat nobis deserunt libero aut animi? Ut rem est voluptate.
-            Mollitia molestiae tempora nobis hic reprehenderit deleniti, dolorem incidunt non et earum voluptates aperiam illo iste quod aliquid! Earum quod optio error repudiandae accusantium est? Dolores a itaque cum incidunt!
-            Itaque minima ea illo asperiores eius pariatur tempore quos recusandae rem excepturi quae placeat numquam quod illum, deleniti provident voluptas vero tenetur commodi sed labore! Quasi tempore voluptates vel a.
-            Doloribus, sint id nisi quaerat amet quisquam odit facere aperiam aspernatur perferendis quidem numquam! Dignissimos dicta blanditiis dolore id odio quo a, iure nihil nostrum quasi fuga, eveniet autem at?
-            Dolorum modi, molestiae vel expedita placeat qui quae, repellendus doloremque odio reprehenderit quod beatae aperiam eveniet repudiandae. Accusamus, vitae! Blanditiis doloremque repellendus et incidunt explicabo praesentium vero repellat laborum quam.
-            Impedit enim assumenda minima perferendis dolores, odit ducimus eos corrupti aperiam consectetur rerum dolorem, ad officiis mollitia doloremque iusto repellendus fugit deleniti minus magnam adipisci quos. Voluptatum deserunt dignissimos fuga.</p>
+            <h2>Mountain Adventures</h2>
+            <p>The mountains offer a sense of adventure and challenge. Whether you are hiking to the peak or just enjoying the scenic views, the mountains have something for everyone.</p>
+        </div>
+
+        <!-- CAROUSEL -->
+        <div class="container">
+            <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
+            <div class="carousel-indicators">
+                <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+                <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
+                <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
+            </div>
+            <div class="carousel-inner">
+                <div class="carousel-item active">
+                    <img src="img/bg1.jpg" class="d-block w-100   object-fit-cover border rounded" style="height: 600px;" alt="Forest Image">
+                    <div class="carousel-caption d-none d-md-block">
+                        <h5>Greece</h5>
+                        <a href="" class="explore_btn">Book Trip</a>
+                    </div>
+                </div>
+                <div class="carousel-item">
+                    <img src="img/bg2.jpg" class="d-block w-100   object-fit-cover border rounded" style="height: 600px;" alt="Mountain Image">
+                    <div class="carousel-caption d-none d-md-block">
+                        <h5>Alps</h5>
+                        <a href="" class="explore_btn">Book Trip</a>
+                    </div>
+                </div>
+                <div class="carousel-item">
+                    <img src="img/bg3.jpg" class="d-block w-100   object-fit-cover border rounded" style="height: 600px;" alt="Beach Image">
+                    <div class="carousel-caption d-none d-md-block">
+                        <h5>Switzerland</h5>
+                        <a href="" class="explore_btn">Book Trip</a>
+                    </div>
+                </div>
+            </div>
+            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Previous</span>
+            </button>
+            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Next</span>
+            </button>
+        </div>
+        </div>
+
+        <!-- END CAROUSEL -->
+
+        <div class="page-content">
+            <h2>Ocean Wonders</h2>
+            <p>The ocean is a vast, mysterious world full of vibrant life. From the crashing waves to the colorful coral reefs, there's always something new to discover under the sea.</p>
         </div>
     </section>
     <!-- end main -->
 
-
-  	<!-- footer -->
-    <footer>
-
+    <!-- footer -->
+    <footer class="footer bg-dark text-white py-4">
+        <div class="container">
+            <div class="row align-items-center">
+                <div class="col-md-4 text-center mb-3 mb-md-0">
+                    <img src="img/logo.png" height="82" width="82" alt="Nature Logo" class="mb-2">
+                    <p class="mb-0">Be brave like Ukraine!</p>
+                </div>
+                <div class="col-md-4 text-center mb-3 mb-md-0">
+                    <ul class="list-unstyled mb-0">
+                        <li><a href="#" class="text-white">Blog</a></li>
+                        <li><a href="https://www.pinterest.com/search/pins/?q=nature&rs=typed" class="text-white">Gallery</a></li>
+                        <li><a href="#" class="text-white">About Us</a></li>
+                        <li><a href="#" class="text-white">Contact Us</a></li>
+                    </ul>
+                </div>
+                <div class="col-md-4 text-center">
+                    <a href="#"><img src="img/facebook.png" height="42" width="42" alt="Facebook" class="mx-2"></a>
+                    <a href="#"><img src="img/X.png" height="42" width="42" alt="Twitter" class="mx-2"></a>
+                    <a href="https://www.instagram.com/stevejobsok/"><img src="img/instagram.png" height="42" width="42" alt="Instagram" class="mx-2"></a>
+                    <a href="https://github.com/Max1mKostenko"><img src="img/github.png" height="42" width="42" alt="GitHub" class="mx-2"></a>
+                </div>
+            </div>
+            <div class="row mt-3">
+                <div class="col-12 text-center">
+                    <p class="mb-0">Copyright © 2024 by Maxim Kostenko</p>
+                </div>
+            </div>
+        </div>
     </footer>
-	<!-- end footer -->
+    <!-- end footer -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </body>
 </html>
